# NeoVerse

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
arquivos/: README_TERMINAL.md  TEST_TERMINAL.js  Terminal.js  Universe_Modifications.js  index.html  main.js
src/: CityManager.js  NetworkManager.js  ObjectManager.js  Terminal.js  Universe.js  WindowManager.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
