[package]
name = "multi-universe"
version = "1.0.0"
description = "Multi Universe - App nativo ultra leve"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# Otimizações para hardware fraco
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"  # Otimiza para tamanho
strip = true     # Remove símbolos de debug

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
